--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "@vue/cli-service": "~4.5.0",
     "@vue/compiler-sfc": "3.0.3",
     "babel-plugin-component": "^1.1.1",
+    "mockjs": "^1.1.0",
     "sass": "^1.26.5",
     "sass-loader": "^8.0.2",
     "scp2": "^0.5.0"
