--- a/.env.production
+++ b/.env.production
@@ -1,5 +1,5 @@
 # just a flag
 ENV = 'production'
 
-VUE_APP_EVENT_BUS = ''
-VUE_APP_HOST = ''
+VUE_APP_EVENT_BUS = 'http://127.0.0.1:18087'
+VUE_APP_HOST = 'http://127.0.0.1:18082'
