修改GPS，ups，envcheck页面调用useEventBus的参数；单例模式封装audio队列；单例模式封装MyAudio类；引入mitt封装成事件发射器，从存活告警组件向告警父组件发射当前存活告警信息；修改告警页面处理告警的逻辑

--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "core-js": "^3.6.5",
     "element-plus": "^1.0.1-beta.17",
     "howler": "^2.2.1",
+    "mitt": "^2.1.0",
     "vertx3-eventbus-client": "^3.9.4",
     "vue": "3.0.3",
     "vue-router": "4.0.0-beta.4"
