增加系统模式获取与设置接口，增加vuex全局数据状态管理，增加顶部显示系统模式并支持修改系统模式为自动或者手动，非手动模式下不可设置环境监测中阀门的开关; 修改模拟eventbus发送假数据参数与实现方式，支持不限次数发送，setInterval改为setTimeout;

--- a/package.json
+++ b/package.json
@@ -11,12 +11,13 @@
   "dependencies": {
     "axios": "^0.20.0-0",
     "core-js": "^3.6.5",
-    "element-plus": "^1.0.1-beta.17",
+    "element-plus": "^1.0.1-beta.24",
     "howler": "^2.2.1",
     "mitt": "^2.1.0",
     "vertx3-eventbus-client": "^3.9.4",
     "vue": "3.0.3",
-    "vue-router": "4.0.0-beta.4"
+    "vue-router": "4.0.0-beta.4",
+    "vuex": "^4.0.0-rc.2"
   },
   "devDependencies": {
     "@vue/cli-plugin-babel": "~4.5.0",
