--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "core-js": "^3.6.5",
     "element-plus": "^1.0.1-beta.24",
     "howler": "^2.2.1",
+    "lodash-es": "^4.17.20",
     "mitt": "^2.1.0",
     "vertx3-eventbus-client": "^3.9.4",
     "vue": "3.0.3",
