--- a/package.json
+++ b/package.json
@@ -11,21 +11,21 @@
   "dependencies": {
     "axios": "^0.20.0-0",
     "core-js": "^3.6.5",
-    "element-plus": "^1.0.1-beta.24",
+    "element-plus": "^1.0.2-beta.33",
     "howler": "^2.2.1",
     "lodash-es": "^4.17.20",
     "mitt": "^2.1.0",
     "vertx3-eventbus-client": "^3.9.4",
-    "vue": "3.0.3",
-    "vue-router": "4.0.0-beta.4",
-    "vuex": "^4.0.0-rc.2"
+    "vue": "^3.0.7",
+    "vue-router": "^4.0.4",
+    "vuex": "^4.0.0"
   },
   "devDependencies": {
     "@vue/cli-plugin-babel": "~4.5.0",
     "@vue/cli-plugin-router": "~4.5.0",
     "@vue/cli-plugin-vuex": "~4.5.0",
     "@vue/cli-service": "~4.5.0",
-    "@vue/compiler-sfc": "3.0.3",
+    "@vue/compiler-sfc": "^3.0.7",
     "babel-plugin-component": "^1.1.1",
     "mockjs": "^1.1.0",
     "sass": "^1.26.5",
